refactor: fix available bugs and enable cors (#35)
* fix: required image id in `UpdateShopRequest`

* fix: validate cardnumber in `UpdateCreditCardRequest`

* fix: call wrong method in `UserPasswordController` and `AdminPasswordController`

* fix: write rules as an array

* refactor: update `ManageProductCategoryRequest` and seperate attribute management endpoint

* refactor: return new prices when updating cart

* chore: add `init.sh`

* ci: enable cors

* chore: update API docs
